--- a/index.mdx
+++ b/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Brixo Agent Analytics"
-description: "Brixo turns your agent telemetry into explainable timelines, cost/latency insights, and outcome dashboards that non‑engineers can use to understand and improve agent behavior."
+description: "Brixo turns your agent telemetry into explainable timelines, cost/latency insights, and outcome dashboards that everyone can use to understand and improve agent behavior."
 ---
 
 ## Why instrument with Brixo?
 - **Frictionless integration**: send raw OTEL spans or point your OpenAI calls to our proxy.
 - **Readable step timelines**: we infer steps automatically; optionally add semantic spans via Traceloop/OpenLLMetry.
-- **Business‑grade analytics**: cost per task, time per step, success/failure reasons, and model usage.
+- **Business‑grade analytics**: tasks, steps, outcomes, sentiment, cost, latency and more. Check out our demo [agent analytics dashboard|https://www.brixo.com/agentdemo].
 
 ## Choose your path
 1. **Zero‑code (HTTP)** · Use the **OpenAI Proxy** for files/batches/requests. → [/http/openai-proxy](/http/openai-proxy)
