Enhance Python Quickstart metadata
Added metadata fields for label, icon, slug, and order.

--- a/ingestion/python.mdx
+++ b/ingestion/python.mdx
@@ -1,9 +1,13 @@
 ---
 title: "Python Quickstart — Send Agent Traces to Brixo"
 description: "Python Quickstart — Send Agent Traces to Brixo"
+label: Python Quickstart 
+icon: rocket 
+slug: quickstart/python 
+order: 1
 ---
 
-## label: Python Quickstart icon: rocket slug: quickstart/python order: 1
+
 
 # Python Quickstart — Send Agent Traces to Brixo
 
