Documentation edits made through Mintlify web editor

--- a/ingestion/python/langchain_and_langgraph.mdx
+++ b/ingestion/python/langchain_and_langgraph.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "Langchain/LangGraph"
 
 ---
 
-## **⚡️**TL;DR
+## ⚡️ TL;DR
 
 ### 1. Set env vars
 
@@ -33,7 +33,7 @@ That’s it — your traces are flowing to **Brixo** ✅
 
 ---
 
-## **🧩 **Prerequisites
+## 🧩 Prerequisites
 
 - Python 3.9+
 - Brixo account + API key
@@ -50,7 +50,7 @@ Brixo accepts OTLP over HTTP. Authentication is via the `Brixo-Auth` header.
 
 ---
 
-## **🧱 **Step 1 — Install dependencies
+## 🧱 Step 1 — Install dependencies
 
 ```python
 # Core OpenTelemetry
@@ -65,7 +65,7 @@ pip install openinference-instrumentation-langchain
 
 ---
 
-## **🧠 **Step 2 — Setup instrumentation
+## 🧠 Step 2 — Setup instrumentation
 
 Add the following instrumentation code **before** your agent is initialized or invoked.
 
