Documentation edits made through Mintlify web editor

--- a/security/data_security_privacy_and_compliance.mdx
+++ b/security/data_security_privacy_and_compliance.mdx
@@ -82,4 +82,4 @@ Brixo is committed to complying with applicable data protection and privacy regu
 
 If you have questions about security or privacy at Brixo, or wish to report a security concern, please contact us at:
 
-\*\*📧 \*\*[**support@brixo.com**](mailto:support@brixo.com)
+📧 [**support@brixo.com**](mailto:support@brixo.com)
